# lapidary-render

./: .gitignore  .pre-commit-config.yaml  404.html  ChangeLog.md  Readme.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.config/: mkdocs.yaml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: pypi.yaml  test.yml
config/: mkdocs.yml
docs/: index.md  json-schema.md  openapi.md  plugins.md
json-schema/: index.html
openapi/: index.html
search/: search_index.json
src/lapidary/render/: __main__.py  black.py  cli.py  client.py  config.py  items.py  jinja.py  json_pointer.py  load.py  main.py  names.py  plugins.py  pydantic_utils.py  pyproject.py  runtime.py  spec.py  writer.py  yaml.py
src/lapidary/render/model/: __init__.py  attribute.py  attribute_annotation.py  auth_module.py  client_class.py  client_init.py  client_model.py  client_module.py  context.py  conv_cst.py  conv_openapi.py  conv_schema.py  metamodel.py  module.py  openapi_conv.py  operation_function.py  param_model_class.py  params.py  paths.py  refs.py  request_body.py  response.py  response_body.py  schema.py  schema_class.py  schema_class_enum.py  schema_class_model.py  schema_module.py  schema_modules.py  stack.py  type_hint.py
src/lapidary/render/model/openapi/: __init__.py  base.py  ext.py  model.py  utils.py
src/lapidary/render/model/python/: __init__.py  attribute.py  auth.py  client.py  client_init.py  model.py  module.py  module_path.py  names.py  op.py  param.py  params.py  plugins.py  response.py  response_map.py  schema_class.py  type_hint.py
src/lapidary/render/templates/: copier.yaml  pyproject.toml  pyproject.toml.jinja  schema_class_model.py.jinja2  schema_class_param_model.py.jinja2  schema_module.py.jinja2  type_hint.py.jinja2  {{ _copier_conf.answers_file }}.jinja
src/lapidary/render/templates/includes/: header.txt  type_hint.py.jinja
src/lapidary/render/templates/includes/client/: method_operation.py.jinja
src/lapidary/render/templates/includes/schema/: schema_class_enum.py.jinja  schema_class_model.py.jinja  schema_class_param_model.py.jinja
src/lapidary/render/templates/includes/security/: api_key.py.jinja  http_basic.py.jinja  http_bearer.py.jinja  oauth2_authorization_code.py.jinja  oauth2_client_credentials.py.jinja  oauth2_implicit.py.jinja  oauth2_password.py.jinja
src/lapidary/render/templates/init/: pyproject.toml.jinja
src/lapidary/render/templates/render/: {{loop_over(model.modules).file_path}}.py.jinja
src/lapidary/render/templates/render/includes/: field.py.jinja  type_hint.py.jinja
src/lapidary/render/templates/render/includes/client/: method_operation.py.jinja
src/lapidary/render/templates/render/includes/module/: metadata.py.jinja  response.py.jinja  schema.py.jinja
src/lapidary/render/templates/render/includes/schema/: schema_class_model.py.jinja
src/lapidary/render/templates/render/includes/security/: api_key.py.jinja  http_digest.py.jinja  oauth2_client_credentials.py.jinja  oauth2_implicit.py.jinja
src/lapidary/render/templates/render/{{model.package}}/: __init__.py.jinja  client.py.jinja
src/lapidary/render/templates/render/{{model.package}}/components/: securitySchemes.py.jinja
src/lapidary/render/templates/src/: openapi.yaml
tests/: anonymous_schema.yaml  anonymous_schema_test.py  global_responses_inline.yaml  global_responses_ref.yaml  name_with_alias.yaml  name_with_space.yaml  operation_functions.yaml  operation_functions_test.py  test_anonymous_schema.py  test_cli.py  test_e2e.py  test_global_responses.py  test_json_schema.py  test_module_path.py  test_names_with_special_chars.py  test_no_auth.py  test_operation_functions.py  test_param_model.py  test_reserved_names.py  test_response_body.py  test_stack.py
tests/e2e/expected/dummy/: dummy.yaml  pyproject.toml
tests/e2e/expected/dummy/src/test_dummy/: client.py
tests/e2e/expected/dummy/src/test_dummy/components/schemas/all/: schema.py
tests/e2e/expected/dummy/src/test_dummy/paths/u_ltestu_l/get/parameters/: meta.py
tests/e2e/expected/dummy/src/test_dummy/paths/u_ltestu_l/get/responses/default/: headers.py
tests/e2e/expected/petstore/: pyproject.toml
tests/e2e/expected/petstore/openapi/patches/: fix-ref.yaml
tests/e2e/expected/petstore/src/openapi/: patch.js
tests/e2e/expected/petstore/src/test_petstore/: client.py
tests/e2e/init/dummy/: dummy.yaml  pyproject.toml
tests/e2e/init/expected/dummy/: pyproject.toml
tests/e2e/init/petstore/: pyproject.toml
tests/e2e/init/petstore/src/openapi/: openapi.yaml
tests/e2e/render/: Readme.md
tests/e2e/render/expected/dummy/src/test_dummy/: client.py
tests/e2e/render/expected/dummy/src/test_dummy/components/schemas/all/: schema.py
tests/e2e/render/expected/dummy/src/test_dummy/components/schemas/schema1/: schema.py
tests/e2e/render/expected/dummy/src/test_dummy/paths/u_ltestu_l/get/parameters/: meta.py
tests/e2e/render/expected/petstore/src/test_petstore/: __init__.py  client.py
tests/e2e/render/expected/petstore/src/test_petstore/components/: securitySchemes.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/ApiResponse/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/Category/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/Order/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/Pet/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/Tag/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/components/schemas/User/: schema.py
tests/e2e/render/expected/petstore/src/test_petstore/paths/u_lpetu_lu_1zpetIdu_21/delete/parameters/: meta.py
tests/e2e/render/initial/dummy/: pyproject.toml
tests/process/: test_normalize.py  test_request_body_schema.py  test_schema.py  test_security_scheme.py  test_servers.py
tests/process/security_schemes/: openapi.yaml
tests/process/servers/: empty.yaml  none.yaml  single-vars.yaml  single.yaml
(+8 files in other folders)
