[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.2.1"]

[project]
authors = [{ name = "Rafał Krupiński", email = "rafal@lapidary.dev" }]
dependencies = [
    "click~=8.2",
    "httpx~=0.28.0",
    "libcst~=1.5",
    "openapi-pydantic~=0.5.0",
    "pybase62~=1.0",
    "pydantic~=2.0",
    "python-mimeparse>=1.6,<3",
    "ruamel-yaml~=0.18.0",
    "tomli-w~=1.0",
]
description = "Python async OpenAPI client library generator"
license = "AGPL-3.0"
name = "lapidary-render"
version = "0.12.1"
readme = "Readme.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
keywords = [
    "OpenAPI",
    "OpenAPI3",
    "CodeGen",
    "Code Generation",
    "Code Generator",
    "OpenAPI Tools",
]
requires-python = "~=3.13"
dynamic=["dependencies"]

[tool.poetry]
packages = [{ include = "lapidary", from = "src" }]

[project.urls]
Homepage = "https://lapidary.dev/"

[project.scripts]
lapidary = "lapidary.render:app"

[dependency-groups]
dev = [
    "pre-commit~=4.0",
    "pytest~=8.0",
    "pytest-asyncio~=0.25.0",
    "pytest-httpx~=0.35.0",
]

docs = [
    "mkdocs~=1.6",
    "mkdocs-material~=9.6",
    "markdown-callouts~=0.4.0",
    "mkdocstrings[python]~=0.30.1",
    "markdown-exec~=1.11",
    "mkdocs-llmstxt~=0.3.2",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-section-index~=0.3.10",
]

[tool.ruff]
target-version = "py313"
extend-exclude = [
    "tests/e2e",
]
line-length = 120
namespace-packages = ["lapidary/render"]
src = ["src"]

[tool.ruff.lint]
extend-select = ['I', 'UP']
extend-ignore = [
    'F401', 'F403', 'F405',
    'UP040', 'UP008',
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
mypy_path = "src"
namespace_packages = true
ignore_missing_imports = true
python_version = "3.13"
packages = ['lapidary.render']
exclude = [
    "tests/e2e",
]

[tool.pytest.ini_options]
norecursedirs = ['tests/e2e']
asyncio_default_fixture_loop_scope = 'function'
log_cli = true
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "--color=yes"
