[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.2"]

[tool.poetry]
name = "petstore"
description = "Client library for Swagger Petstore - OpenAPI 3.0"
version = "0.1.0"
authors = []
license = ""
packages = [
    { include = 'test_petstore', from = "gen" },
]

[tool.poetry.dependencies]
python = "^3.9"
lapidary = {path = "../../../../../lapidary", develop = true}

[tool.lapidary]
document_path = "src/openapi/openapi.yaml"
origin = "https://petstore3.swagger.io/api/v3/openapi.json"
package = "test_petstore"
