[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.2"]

[tool.poetry]
name = "dummy"
description = "Client library for dummy schema"
version = "0.1.0"
authors = []
license = ""
packages = [
    { include = 'test_dummy', from = "gen" },
]

[tool.poetry.dependencies]
python = "^3.9"
lapidary = {path="../../../../../lapidary"}

[tool.lapidary]
document_path = "dummy.yaml"
package = "test_dummy"
